--- a/app/src/main/res/layout/view_camera_and_title.xml
+++ b/app/src/main/res/layout/view_camera_and_title.xml
@@ -6,16 +6,30 @@
               android:layout_marginRight="16dp"
               android:orientation="horizontal">
 
-    <ImageButton
-        android:id="@+id/crime_photo_imageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-        android:background="@android:color/darker_gray"
-        android:cropToPadding="true"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_menu_add"/>
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/crime_photo_imageView"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@android:color/darker_gray"
+            android:cropToPadding="true"
+            android:scaleType="centerInside"
+            android:clickable="true"
+            android:src="@drawable/ic_menu_add"/>
+
+        <ImageButton
+            android:id="@+id/take_photo_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_camera"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
