--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -5,6 +5,6 @@
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.practice.android.criminalintent.SingleFragmentActivity">
+    tools:context="com.practice.android.criminalintent.activity.SingleFragmentActivity">
 
 </FrameLayout>
